<resources>
    <string name="app_name">Calculadora</string>
    <string name="titulo">CALCULADORA</string>
    <string name="numero_uno">Número Uno</string>
    <string name="numero_dos">Número Dos</string>
    <string name="calcular">Calcular</string>
    <string name="mensaje_error_numero_uno">Digite el número uno</string>
    <string name="mensaje_error_numero_dos">Digite el número dos</string>
    <string name="limpiar">Limpiar</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicación</string>
    <string name="division">División</string>
    <string name="mensaje_error_divison_cero">No puede dividir por cero</string>


    <string-array name="operaciones">
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>
    </string-array>
</resources>